--- a/.github/workflows/summaryUpdate.yml
+++ b/.github/workflows/summaryUpdate.yml
@@ -42,9 +42,9 @@ jobs:
       
       - id: setOut
         run: | 
-          echo ::set-output name=cases::"${steps.remoteData.outputs.response.cases}"
-          echo ::set-output name=deaths::"${steps.remoteData.outputs.response.deaths}"
-          echo ::set-output name=recovered::"${steps.remoteData.outputs.response.recovered}"
+          echo "::set-output name=cases::${{ steps.remoteData.outputs.response.cases }}"
+          echo "::set-output name=deaths::${{ steps.remoteData.outputs.response.deaths }}"
+          echo "::set-output name=recovered::${{ steps.remoteData.outputs.response.recovered }}"
         shell: bash
             
     # Runs command to update the UG Covid 19 Summary enpoint with data from the previous step
@@ -54,7 +54,7 @@ jobs:
         with:
           url: 'https://ug-covid19-rest-api.herokuapp.com/summary'
           method: put
-          data: '{ "cases": steps.setOut.outputs.cases, "deaths": steps.setOut.outputs.deaths, "recoveries": steps.setOut.outputs.recovered }'
+          data: '{ "cases": ${${{ steps.setOut.outputs.cases }}}, "deaths": ${${{ steps.setOut.outputs.deaths }}}, "recoveries": ${${{ steps.setOut.outputs.recovered }}} }'
     
     # Print the returned output  
       - name: Print the response payload
