--- a/.github/workflows/summaryUpdate.yml
+++ b/.github/workflows/summaryUpdate.yml
@@ -37,16 +37,16 @@ jobs:
       
       # Print the returned output  
       - name: Print the response payload
-        run: echo ${{ steps.remoteData.outputs.response }}
+        run: echo ${{ steps.remoteData.outputs.response.value }}
         shell: bash
         
         
       
       - id: setOut
         run: | 
-          echo ::set-output name=cases::"${{ steps.remoteData.outputs.response.cases }}"
-          echo ::set-output name=deaths::"${{ steps.remoteData.outputs.response.deaths }}"
-          echo ::set-output name=recovered::"${{ steps.remoteData.outputs.response.recovered }}"
+          echo "::set-output name=cases::$(steps.remoteData.outputs.response.cases)"
+          echo "::set-output name=deaths::$(steps.remoteData.outputs.response.deaths)"
+          echo "::set-output name=recovered::$(steps.remoteData.outputs.response.recovered)"
         shell: bash
             
     # Runs command to update the UG Covid 19 Summary enpoint with data from the previous step
